report work + added some references

--- a/Domination/honours-project-report/mybibfile.bib
+++ b/Domination/honours-project-report/mybibfile.bib
@@ -1,24 +1,3 @@
-
-@book{P1,
-	author=         {Chang, C. and Keisler, J.},
-	title=          {Model Theory},
-	publisher=      {Elsevier},
-	year=           1990,
-	address =       {Amsterdam, Holland}
-}
-
-@inproceedings{P2,
-	author=         {Arimura, H.},
-	title=          {Learning Acyclic First-order {Horn} Sentences 
-		         from Entailment},
-	booktitle =     {Proceedings of the International Conference
-		         on Algorithmic Learning Theory},
-	year =          {1997},
-	publisher=      {Springer-verlag},
-	note =          {LNAI 1316},
-	address =       {Sendai, Japan}
-}
-
 @inproceedings{Albrecht98bayesianmodels,
 	author = {David W. Albrecht and Ingrid Zukerman and Ann E. Nicholson},
 	title = {Bayesian Models for Keyhole Plan Recognition in an Adventure Game},
@@ -28,4 +7,173 @@
 	publisher = {}
 }
 
+@ARTICLE{Goldman99anew,
+    author = {Robert P. Goldman and Christopher W. Geib and Christopher A. Miller},
+    title = {A New Model of Plan Recognition},
+    journal = {Artificial Intelligence},
+    year = {1999},
+    volume = {64},
+    pages = {53--79}
+}
+
+@Article{journals/ai/GeibG09,
+  title =	"A Probabilistic Plan Recognition Algorithm Based on
+		 Plan Tree Grammars",
+  author =	"Christopher W. Geib and Robert P. Goldman",
+  journal =	"Artif. Intell",
+  year = 	"2009",
+  number =	"11",
+  volume =	"173",
+  bibdate =	"2009-07-02",
+  bibsource =	"DBLP,
+		 http://dblp.uni-trier.de/db/journals/ai/ai173.html#GeibG09",
+  pages =	"1101--1132",
+  URL =  	"http://dx.doi.org/10.1016/j.artint.2009.01.003",
+}
+
+@Article{journals/ai/CharniakG93,
+  title =	"A Bayesian Model of Plan Recognition",
+  author =	"Eugene Charniak and Robert P. Goldman",
+  journal =	"Artif. Intell",
+  year = 	"1993",
+  number =	"1",
+  volume =	"64",
+  bibdate =	"2011-06-30",
+  bibsource =	"DBLP,
+		 http://dblp.uni-trier.de/db/journals/ai/ai64.html#CharniakG93",
+  pages =	"53--79",
+  URL =  	"http://dx.doi.org/10.1016/0004-3702(93)90060-O",
+}
+
+@Article{journals/ai/SchmidtSG78,
+  title =	"The Plan Recognition Problem: An Intersection of
+		 Psychology and Artificial Intelligence",
+  author =	"Charles F. Schmidt and N. S. Sridharan and John L.
+		 Goodson",
+  journal =	"Artif. Intell",
+  year = 	"1978",
+  number =	"1-2",
+  volume =	"11",
+  bibdate =	"2011-06-30",
+  bibsource =	"DBLP,
+		 http://dblp.uni-trier.de/db/journals/ai/ai11.html#SchmidtSG78",
+  pages =	"45--83",
+  URL =  	"http://dx.doi.org/10.1016/0004-3702(78)90012-7",
+}
+
+@InProceedings{conf/aaai/KautzA86,
+  title =	"Generalized Plan Recognition",
+  author =	"Henry A. Kautz and James F. Allen",
+  bibdate =	"2012-12-12",
+  bibsource =	"DBLP,
+		 http://dblp.uni-trier.de/db/conf/aaai/aaai86-1.html#KautzA86",
+  booktitle =	"AAAI",
+  booktitle =	"Proceedings of the 5th National Conference on
+		 Artificial Intelligence. Philadelphia, {PA}, August
+		 11-15, 1986. Volume 1: Science",
+  publisher =	"Morgan Kaufmann",
+  year = 	"1986",
+  editor =	"Tom Kehler",
+  pages =	"32--37",
+  URL =  	"http://www.aaai.org/Conferences/AAAI/aaai86.php",
+}
+
+@Misc{oai:CiteSeerPSU:538953,
+  title =	"Retroactive Recognition of Interleaved Plans for
+		 Natural Language Dialogue",
+  author =	"Nate Blaylock",
+  year = 	"2001",
+  month =	dec # "~11",
+  abstract =	"State of the art plan recognition for use in natural
+		 language dialogue systems has progressed in coverage of
+		 discourse phenomena and plan navigation strategies.
+		 Most systems, however, suffer from several
+		 deficiencies, namely, they do not have a specific
+		 strategy for the (inevitable) case where they make an
+		 incorrect hypothesis inference and they cannot handle
+		 interleaved plan navigation, where a user jumps back
+		 and forth between several plans. In addition, most plan
+		 recognition systems cannot handle the rich variety of
+		 possible natural language utterances a dialogue system
+		 may receive as input, especially the case where a
+		 language utterance corresponds to several actions which
+		 the system considers to be atomic. We discuss previous
+		 work in plan recognition, especially in the area of
+		 dialogues systems. We then describe a plan recognition
+		 system which can recover from incorrect inferences,
+		 handles interleaved plan navigation, and handles
+		 several linguistic phenomena, including support for
+		 natural language multi-action paraphrase.",
+  citeseer-references = "oai:CiteSeerPSU:63019; oai:CiteSeerPSU:513508;
+		 oai:CiteSeerPSU:380018; oai:CiteSeerPSU:42303;
+		 oai:CiteSeerPSU:129022; oai:CiteSeerPSU:153181;
+		 oai:CiteSeerPSU:154202; oai:CiteSeerPSU:27849;
+		 oai:CiteSeerPSU:49669; oai:CiteSeerPSU:76352;
+		 oai:CiteSeerPSU:136682; oai:CiteSeerPSU:580310;
+		 oai:CiteSeerPSU:580093; oai:CiteSeerPSU:66010;
+		 oai:CiteSeerPSU:287495; oai:CiteSeerPSU:29975;
+		 oai:CiteSeerPSU:454853; oai:CiteSeerPSU:103423;
+		 oai:CiteSeerPSU:131954; oai:CiteSeerPSU:357862;
+		 oai:CiteSeerPSU:150824; oai:CiteSeerPSU:654811;
+		 oai:CiteSeerPSU:559276; oai:CiteSeerPSU:575960;
+		 oai:CiteSeerPSU:385719; oai:CiteSeerPSU:583001;
+		 oai:CiteSeerPSU:177943; oai:CiteSeerPSU:582710",
+  annote =	"Nate Blaylock (The University of Rochester; Computer
+		 Science Department; Rochester , New York 14627);",
+  bibsource =	"OAI-PMH server at cs1.ist.psu.edu",
+  language =	"en",
+  oai =  	"oai:CiteSeerPSU:538953",
+  rights =	"unrestricted",
+  URL =  	"http://citeseer.ist.psu.edu/538953.html;
+		 http://www.cs.rochester.edu/u/blaylock/Pubs/./Files/tr761.ps",
+}
+
+@InProceedings{conf/aiide/SynnaeveB11,
+  title =	"A Bayesian Model for Plan Recognition in {RTS} Games
+		 Applied to StarCraft",
+  author =	"Gabriel Synnaeve and Pierre Bessi{\`e}re",
+  bibdate =	"2012-02-13",
+  bibsource =	"DBLP,
+		 http://dblp.uni-trier.de/db/conf/aiide/aiide2011.html#SynnaeveB11",
+  booktitle =	"AIIDE",
+  booktitle =	"Proceedings of the Seventh {AAAI} Conference on
+		 Artificial Intelligence and Interactive Digital
+		 Entertainment, {AIIDE} 2011, October 10-14, 2011,
+		 Stanford, California, {USA}",
+  publisher =	"The AAAI Press",
+  year = 	"2011",
+  editor =	"Vadim Bulitko and Mark O. Riedl",
+  URL =  	"http://www.aaai.org/Library/AIIDE/aiide11contents.php",
+}
+
+@InCollection{Cohen82a,
+  author =	"Philip R. Cohen and C. Raymond Perrault and James F.
+		 Allen",
+  editor =	"Wendy G. Lehnert and Martin H. Ringle",
+  title =	"Beyond question answering",
+  booktitle =	"Strategies for Natural Language Processing",
+  pages =	"245--274",
+  publisher =	"Erlbaum",
+  address =	"Hillsdale",
+  year = 	"1982",
+  keywords =	"QE 300 Str",
+}
+
+@InProceedings{conf/flairs/GeibG01,
+  title =	"Probabilistic Plan Recognition for Hostile Agents",
+  author =	"Christopher W. Geib and Robert P. Goldman",
+  bibdate =	"2012-12-13",
+  bibsource =	"DBLP,
+		 http://dblp.uni-trier.de/db/conf/flairs/flairs2001.html#GeibG01",
+  booktitle =	"FLAIRS Conference",
+  booktitle =	"Proceedings of the Fourteenth International Florida
+		 Artificial Intelligence Research Society Conference,
+		 May 21-23, 2001, Key West, Florida, {USA}",
+  publisher =	"AAAI Press",
+  year = 	"2001",
+  editor =	"Ingrid Russell and John F. Kolen",
+  ISBN = 	"1-57735-133-9",
+  pages =	"580--584",
+  URL =  	"http://www.aaai.org/Library/FLAIRS/2001/flairs01-111.php",
+}
 
