More report work.

--- a/Domination/honours-project-report/mybibfile.bib
+++ b/Domination/honours-project-report/mybibfile.bib
@@ -16,21 +16,6 @@
     pages = {53--79}
 }
 
-@Article{journals/ai/GeibG09,
-  title =	"A Probabilistic Plan Recognition Algorithm Based on
-		 Plan Tree Grammars",
-  author =	"Christopher W. Geib and Robert P. Goldman",
-  journal =	"Artif. Intell",
-  year = 	"2009",
-  number =	"11",
-  volume =	"173",
-  bibdate =	"2009-07-02",
-  bibsource =	"DBLP,
-		 http://dblp.uni-trier.de/db/journals/ai/ai173.html#GeibG09",
-  pages =	"1101--1132",
-  URL =  	"http://dx.doi.org/10.1016/j.artint.2009.01.003",
-}
-
 @Article{journals/ai/CharniakG93,
   title =	"A Bayesian Model of Plan Recognition",
   author =	"Eugene Charniak and Robert P. Goldman",
@@ -159,21 +144,22 @@
   keywords =	"QE 300 Str",
 }
 
-@InProceedings{conf/flairs/GeibG01,
-  title =	"Probabilistic Plan Recognition for Hostile Agents",
-  author =	"Christopher W. Geib and Robert P. Goldman",
-  bibdate =	"2012-12-13",
-  bibsource =	"DBLP,
-		 http://dblp.uni-trier.de/db/conf/flairs/flairs2001.html#GeibG01",
-  booktitle =	"FLAIRS Conference",
-  booktitle =	"Proceedings of the Fourteenth International Florida
-		 Artificial Intelligence Research Society Conference,
-		 May 21-23, 2001, Key West, Florida, {USA}",
-  publisher =	"AAAI Press",
-  year = 	"2001",
-  editor =	"Ingrid Russell and John F. Kolen",
-  ISBN = 	"1-57735-133-9",
-  pages =	"580--584",
-  URL =  	"http://www.aaai.org/Library/FLAIRS/2001/flairs01-111.php",
-}
-
+@article{Geib:2009:PPR:1550966.1551246,
+ author = {Geib, Christopher W. and Goldman, Robert P.},
+ title = {A probabilistic plan recognition algorithm based on plan tree grammars},
+ journal = {Artif. Intell.},
+ issue_date = {July, 2009},
+ volume = {173},
+ number = {11},
+ month = jul,
+ year = {2009},
+ issn = {0004-3702},
+ pages = {1101--1132},
+ numpages = {32},
+ url = {http://dx.doi.org/10.1016/j.artint.2009.01.003},
+ doi = {10.1016/j.artint.2009.01.003},
+ acmid = {1551246},
+ publisher = {Elsevier Science Publishers Ltd.},
+ address = {Essex, UK},
+ keywords = {Action grammars, Bayesian methods, Goal recognition, Intent inference, Plan recognition, Probabilistic grammars, Task tracking},
+} 
